updated deps for enablePreview